--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
           <li class="list-inline-item">
             <a href="#" class="text-muted">Redes</a>
           </li>
+          <li class="list-inline-item">
+            <a href="#" class="text-muted">
+              <img src="imagenes/whatsapp-icon-transparent-free-png.webp" class="tamano-icono">
+            </a>
+          </li>
         </ul>
       </div>
     </div>
