--- a/micuenta.html
+++ b/micuenta.html
@@ -55,7 +55,7 @@
     <div class="container d-flex justify-content-center align-items-center">
         <div class="login-container shadow">
           <h2 class="form-title">INICIO DE SESION</h2>
-    
+          <!--Formulario de inicio de ses-->
           <form>
             <div class="mb-3">
               <label for="email" class="form-label">E-Mail:</label>
@@ -108,6 +108,11 @@
           </li>
           <li class="list-inline-item">
             <a href="#" class="text-muted">Redes</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" class="text-muted">
+              <img src="imagenes/whatsapp-icon-transparent-free-png.webp" class="tamano-icono">
+            </a>
           </li>
         </ul>
       </div>
